menu items alignment fixed

--- a/kxYorkville/src/assets/main.css
+++ b/kxYorkville/src/assets/main.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   overflow-x: hidden;
-  background-color: #b74646;
+  background-color: #202020;
   color: #f4f4f4;
   /* scrollbar-width: none; */
 }
